# tasktray

./: CMakeLists.txt  README.md  main.cpp  manual.tjs  readme.txt
